	source/headers/geos/geom/MultiLineString.h,
	source/headers/geos/geom/MultiPoint.h,
	source/headers/geos/geom/MultiPolygon.h,
	source/headers/geos/geom/Point.h,
	source/headers/geos/geom/Polygon.h:
	Geometry constructors made protected, to ensure all
	constructions use GeometryFactory, which has been made
	friend of all Geometry derivates. getNumPoints() changed
	to return size_t.

2006-04-27 Sandro Santilli <strk@refractions.net>

	* source/geomgraph/Node.cpp: standard algorithm used in addZ()
	for vector seek.
	* source/geomgraph/NodeMap.cpp: (addNode): always use the Node
	Coordinate as a key in the map to reduce likeliness of
	a premature deletion.
	* source/geomgraph/PlanarGraph.cpp: use output ops when
	available, for debugging lines
	* source/headers/geos/geomgraph/Node.h: Z check removed
	from invariant tester to avoid aborts due to differences
	in FP computations.

2006-04-26 Sandro Santilli <strk@refractions.net>

	* source/io/StringTokenizer.cpp: fixed bug in peekNextToken()
	function failing read numbers correctly.
	* source/io/WKTReader.cpp: fixed MultiPoint reader
	to accept the correct format: "MULTIPOINT((0 0), (1 1))"
	* tests/xmltester/testLeaksBig.xml: changed some MULTIPOINT
	WKTs to test acceptance.

2006-04-26 Silke Reimer <Silke.Reimer@intevation.de>

	* tools/geos-config.in: fixed library path
	to use layout detected by autoconf

2006-04-22 Mateusz Loskot <mateusz@loskot.net>

	* source/simplify/TopologyPreservingSimplifier.cpp:
	helper classes ctors made public (Bug #100)

2006-04-21 Sandro Santilli <strk@refractions.net>

	* source/geom/PrecisionModel.cpp: fixed
	constructor by type to always initialize scale

2006-04-20 Sandro Santilli <strk@refractions.net>

	* headers/geos/geom/BinaryOp.h: added debugging
	output.
	* geos::algorithm::HCoordinate: switched to
	use of 'long double' types for improved precision.
	added compile time define to force storage of
	intermediate computation values to variables (in